[package]
name = "server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
env_logger = "0.11.8"
fastrand = "2.3.0"
futures-lite = "2.6.1"
glommio = { git = "https://github.com/utilitydelta/glommio", branch = "tcp-into-raw-fd-support" }
log = "0.4.28"
lru = "0.16.1"
num_cpus = "1.17.0"
